# python_pomodoro

./: README.md  pyproject.toml
src/python_pomodoro/: __init__.py  cli.py  config.py  state.py
