[project]
name = "python-pomodoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stephen Brown", email = "46618639+sbrown3212@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-pomodoro = "python_pomodoro:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
