[project]
name = "python_pomodoro"
version = "0.1.0"
description = "Pomodoro timer CLI application written in Python."
readme = "README.md"
authors = [
    { name = "Stephen Brown", email = "46618639+sbrown3212@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
pomodoro = "python_pomodoro:cli.cli"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
